--- a/Pages/CreateCourse.razor
+++ b/Pages/CreateCourse.razor
@@ -4,18 +4,84 @@
 
 <h3>Opret Bane</h3>
 
+<div class="mainFlexContainer">
+    <div class="exerciseFlexContainer">
+        <div id="exercises" class="container">
+            <div class="dragExercise">Ikon</div>
+            <div class="dragExercise">Ikon2</div>
+        </div>   
+    </div>
+@* 
+    <div class="horizontalContainer">
+        @for (int i = 1; i <= 10; i++)
+        {
+            <div class="courseHorizontalGridContainer">
+                <div id="course@(i)" class="container"></div>
+            </div>
+        }
+    </div>
 
-<div id="left" class="container">
-    <div class="dragthing">Ikon</div>
+    <div class="verticalContainer">
+        @for (int i = 1; i <= 10; i++)
+        {
+            <div class="courseVerticalGridContainer">
+                <div id="course1@(i)" class="container"></div>
+            </div>
+        }
+    </div> *@
+
+    <div class="mainFlexContainer">
+        <div class="exerciseFlexContainer">
+            <div id="exercises" class="container">
+                <div class="dragExercise">Ikon</div>
+                <div class="dragExercise">Ikon2</div>
+            </div>
+        </div>
+
+        <div class="mainGridContainer">
+            @for (int i = 1; i <= 112; i++)
+            {
+                <div class="courseHorizontalGridContainer">
+                    <div id="course@(i)" class="container"></div>
+                </div>
+            }
+        </div>
+    </div>
+
+    @* <div class="courseGridContainer">
+        <div id="course1" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course2" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course3" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course4" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course5" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course6" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course7" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course8" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course9" class="container"></div>
+    </div>
+    <div class="courseGridContainer">
+        <div id="course10" class="container"></div>
+    </div> *@
 </div>
 
-<div id="right" class="container">
-    <div class="dragthing">Bane</div>
-</div>
 
-
-
-@code {
+@* @code {
     [Inject]
     protected IJSRuntime JSRuntime { get; set; }
 
@@ -26,7 +92,23 @@
             await JSRuntime.InvokeVoidAsync("init");
         }
     }
+} *@
+
+@code {
+    [Inject]
+    protected IJSRuntime JSRuntime { get; set; }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await JSRuntime.InvokeVoidAsync("init");
+          
+            // Tilføj flere initialiseringer efter behov
+        }
+    }
 }
+
 
 
 
@@ -70,7 +152,7 @@
     private bool showErrorMessage = false;
     private string errorMessage;
 
-    
+
     private async Task HandleValidSubmit()
     {
         try
